--- a/thankyou.html
+++ b/thankyou.html
@@ -81,6 +81,12 @@
             box-shadow: 0 6px 20px rgba(0,0,0,0.3);
             color: #fff;
         }
+
+        @media (max-width: 1025px) {
+            .certificate-img {
+                max-width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
